# stanza

./: .env.dev  Cargo.toml  Dockerfile  compose.yml
db/: setup.sql
src/: main.rs
src/secrets/: mod.rs
stanza-front/: package-lock.json  package.json
stanza-front/src/routes/test-posts/: +page.svelte
