[package]
name = "stanza"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = "1.43.0"
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
